--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"
-    href="style.css/">
+    href="stylesheet.css">
     <title>Weather Dashboard</title>
     <script src= "weather.js/"></script>
 </head>
-<header>Weather Dashboard</header>
+<div class="header">
+    <h1>Weather Dashboard</h1>
+</div>
 
 <body>
     
