worked on uv index

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                         <p id="today-temp"></p>
                         <p id="today-humidity"></p>
                         <p id="today-wind"></p>
+                        <p id="today-uv-index"></p>
                     </div>
                     <div class="col">  <img id="today-icon-div" src="">
                     <div id="current-day" class="bg-light p-3">  </div></div>
@@ -59,8 +60,8 @@
             </div>
             
         <div class= "row justify-content-center">
-            <div id= "day" class="card-body mx-2 my-2">
-                <h5 id= "date"></h5>
+            <div id= "0date" class="card-body mx-2 my-2">
+                <h5 id= "0date"></h5>
                 <p id="0five-day-temp"></p>
                 <p id="0five-day-humidity"></p>
                 <img id="0five-day-icon" src="">
